@@ -1,9 +1,4 @@
 FROM maven:3.8.6-openjdk-8
-# RUN apt install npm
-# RUN npm install
-# RUN npm run-script lint
-
-#ENV MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=512m"
 
 WORKDIR /app
 
